ConfigProvider - typesafe